--- a/app/views/games/_keys.html.erb
+++ b/app/views/games/_keys.html.erb
@@ -1,3 +1,3 @@
-<% keys.char.each do |letter| %>
+<% keys.chars.each do |letter| %>
   <%= create_guess_button(@game, letter, class: 'keyboard-key') %>
 <% end %>
